# crypto.rs

./: .gitignore  .license_template  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.changes/: add-aead-trait.md  add-aes-cbc.md  add-aes-gcm.md  add-aes-key-wrap.md  add-bip39-codec.md  add-chacha20-poly1305.md  add-covector.md  add-derives.md  add-ed25519-eq-ord-traits.md  add-ed25519-tests.md  add-hmac-sha384.md  add-hmac.md  add-nist-p256.rs  add-pbkdf-hmac-sha256-384.md  add-secp256k1.md  add-sha-384.md  add-sha.md  add-slip10-curves.md  add-slip10.md  add-x448.rs  aead-helpers.md  aes-cbc.md  age-better-error.md  age.md  bip39-better-refs.md  bip39-decode-separator.md  bip39-safety-wrappers.md  bip39-seed.md  bip44-improvements.md  bip44-new-coin-type.md  bip44.md  blake2b-160.md  blake2b256-fixed-output-reset-impl.md  bump-bee-ternary-changelog.md  bump-bee-ternary.md  bump-blake2.md  bump-version-minor.md  chain_access.md  config.json  correct-features-for-pbkdf-error.md  (+40 more)
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  clippy.yml  covector-status.yml  covector-version-or-publish.yml  coverage.yml  format.yml  no_std.yml  tests.yml  wasm.yml
.github/workflows/scripts/: coverage.sh
bindings/crypto.c/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  iota_crypto.h  main.c
bindings/crypto.c/include/: iota_crypto.h
bindings/crypto.c/src/: lib.rs
bindings/crypto.js/: README.md  package.json
bindings/crypto.js/integration/: package.json
bindings/crypto.js/lib/: index.js  index_bak.js
bindings/crypto.js/native/: Cargo.toml
bindings/crypto.js/native/src/: lib.rs  lib_bak.rs
bindings/crypto.js/tests/: simple.js  simple_bak.js
src/: aes_kw.rs  bip39.en.rs  bip39.jp.rs  bip39.rs  blake2b.rs  ciphers.rs  digest.rs  ed25519.rs  error.rs  key_box.rs  lib.rs  macros.rs  rand.rs  slip10.rs  test_utils.rs  x25519.rs
src/ciphers/: aes.rs  aes_cbc.rs  aes_gcm.rs  aes_kw.rs  chacha.rs  macros.rs  mod.rs  traits.rs
src/encoding/: mod.rs
src/encoding/ternary/: b1t6.rs  convert.rs  mod.rs  raw.rs  serde.rs  t1b1.rs  t2b1.rs  t3b1.rs  t4b1.rs  t5b1.rs  tryte.rs
src/encoding/ternary/tests/: b1t6.rs  buf.rs  convert.rs  serde.rs  slice.rs  trit.rs  tryte.rs
src/encoding/ternary/tests/common/: mod.rs
src/encoding/ternary/trit/: balanced.rs  mod.rs  unbalanced.rs
src/hashes/: blake2b.rs  curl_p.rs  keccak.rs  mod.rs  sha.rs
src/hashes/sponge/: curl_p.rs  mod.rs
src/hashes/sponge/kerl/: mod.rs
src/hashes/sponge/kerl/bigint/: binary_representation.rs
src/hashes/sponge/kerl/bigint/i384/: constants.rs  mod.rs
src/hashes/sponge/kerl/bigint/t242/: constants.rs  mod.rs
src/hashes/sponge/kerl/bigint/t243/: constants.rs  mod.rs
src/hashes/sponge/kerl/bigint/u384/: constants.rs  mod.rs
src/hashes/ternary/: mod.rs
src/hashes/ternary/curl_p/: mod.rs
src/hashes/ternary/curl_p/batched/: bct.rs  bct_curlp.rs  mod.rs
src/hashes/ternary/curl_p/regular/: mod.rs  transform.rs  u256.rs
src/hashes/ternary/kerl/: mod.rs
src/hashes/ternary/kerl/bigint/: binary_representation.rs  error.rs  macros.rs
src/hashes/ternary/kerl/bigint/i384/: constants.rs  mod.rs
src/hashes/ternary/kerl/bigint/t242/: constants.rs  mod.rs
src/hashes/ternary/kerl/bigint/t243/: constants.rs  mod.rs
src/hashes/ternary/kerl/bigint/u384/: constants.rs  mod.rs
src/kdfs/: mod.rs  pbkdf.rs
src/keys/: age.rs  bip39.en.rs  bip39.jp.rs  bip39.pt.rs  bip39.rs  bip44.rs  mod.rs  pbkdf.rs  slip10.rs  x25519.rs  x448.rs
src/keys/slip10/: interface.rs  mod.rs
src/keys/ternary/: mod.rs  seed.rs
src/keys/ternary/wots/: mod.rs  shake.rs  sponge.rs
src/macs/: hmac.rs  mod.rs
src/signatures/: ed25519.rs  mod.rs  p256.rs  secp256k1.rs  secp256k1_ecdsa.rs  sr25519.rs
src/signatures/ternary/: mod.rs  wots.rs
src/signers/: ed25519.rs  hmac.rs  mod.rs  rsa.rs  wots.rs
src/signers/ecdsa/: k256.rs  mod.rs  p256.rs
src/signers/eddsa/: ed25519.rs  mod.rs
src/utils/: mod.rs  rand.rs  test_utils.rs
tests/: aead.rs  aes.rs  aes_kw.rs  batched_curlp.rs  bip39.rs  bip44.rs  blake2b.json  blake2b.rs  chacha.rs  curl_p.rs  ed25519.rs  hmac.rs  keccak.rs  kerl.rs  p256.rs  pbkdf2.rs  secp256k1.rs  secp256k1_ecdsa.rs  sha.rs  slip10.rs  sr25519.rs  ternary_b1t6.rs  ternary_buf.rs  ternary_convert.rs  ternary_serde.rs  ternary_slice.rs  ternary_trit.rs  ternary_tryte.rs  utils.rs  wots.rs  x25519.rs  x448.rs
tests/common/: mod.rs
tests/fixtures/: aes_128_cbc_hmac_sha_256.rs  aes_128_gcm.rs  aes_128_kw.rs  aes_192_cbc_hmac_sha_384.rs  aes_192_gcm.rs  aes_192_kw.rs  aes_256_cbc_hmac_sha_512.rs  aes_256_gcm.rs  aes_256_kw.rs  bip39.rs  bip39_en.rs  bip39_jp.rs  bip39_pt.rs  bip39_secp256k1.rs  blake2b.json  chacha20_poly1305.rs  ed25519.rs  ed25519_sign.rs  hmac_sha256.rs  hmac_sha384.rs  hmac_sha512.rs  keccak_256.rs  p256.rs  pbkdf2_hmac_sha256.rs  pbkdf2_hmac_sha384.rs  pbkdf2_hmac_sha512.rs  sha2_256.rs  sha2_384.rs  sha2_512.rs  sign.input  slip10_ed25519.rs  slip10_secp256k1.rs  sr25519.rs  x25519.rs  x448.rs  xchacha20_poly1305.rs  zip215.rs
tests/fixtures/curl_p/: input_243_output_243.rs  input_243_output_486.rs  input_243_output_6561.rs  input_486_output_486.rs  input_6561_output_243.rs  input_6561_output_6561.rs  input_8019_output_243.rs
tests/fixtures/kerl/: generateMultiTrytesAndHash.txt  generateTrytesAndHashes.txt  generateTrytesAndMultiSqueeze.txt
tests/fixtures/wots/: generateNAddressesForSeed.txt
tests/test_vectors/bip39/: bip32JP.sh  trezor.sh  trezorPT.sh
tests/test_vectors/nacl/: x25519.c
tests/test_vectors/py/: main.py
utils/test_vectors/bip39/: bip32JP.sh  trezor.sh  wordlist.sh
utils/test_vectors/nacl/: mk.sh
utils/test_vectors/nist/: fetch.sh  mangle_cavp.py  sha.sh
utils/test_vectors/py/: .gitignore  GNUmakefile  ed25519_sign_transform.py  main.py
utils/test_vectors/pynacl/: main.py  requirements.txt
