[package]
name = "iota-crypto"
version = "0.15.3"
license = "Apache-2.0"
authors = [
  "Gustav Behm <gustav.behm@iota.org>",
  "Daniel Thompson-Yvetot <daniel.yvetot@iota.org>"
]
edition = "2018"
readme = "README.md"
keywords = [ "iota", "cryptography", "security" ]
categories = [ "security" ]
description = "The canonical source of cryptographic ground-truth for all IOTA Rust projects"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/crypto.rs"
exclude = [ "/tests", "/.github", "/.changes" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[lib]
name = "crypto"

[features]
default = [ ]
std = [ ]
aes-cbc = [
  "aes-crate",
  "block-modes",
  "cipher",
  "hmac",
  "sha",
  "subtle"
]
aes-kw = [ "aes-crate" ]
aes-gcm = [ "aes-gcm-crate", "cipher" ]
chacha = [ "chacha20poly1305", "cipher" ]
ed25519 = [ "ed25519-zebra" ]
x25519 = [ "x25519-dalek", "curve25519-dalek" ]
random = [ "getrandom" ]
aes = [ "aes-cbc", "aes-gcm", "aes-kw" ]
blake2b = [ "blake2", "digest" ]
ternary_hashes = [ ]
curl-p = [ "ternary_hashes", "ternary_encoding" ]
kerl_deprecated_do_not_use = [
  "ternary_hashes",
  "ternary_encoding",
  "byteorder",
  "lazy_static",
  "tiny-keccak"
]
ternary_keys = [ ]
ternary_signatures = [ ]
wots_deprecated_do_not_use = [
  "ternary_keys",
  "ternary_signatures",
  "ternary_encoding",
  "sha3",
  "zeroize",
  "rand",
  "bee-common-derive"
]
sha = [ "sha2", "digest" ]
hmac = [ "hmac_" ]
pbkdf = [ "pbkdf2" ]
bip39 = [ "pbkdf", "hmac", "sha", "pbkdf", "unicode-normalization" ]
bip39-en = [ "bip39" ]
bip39-jp = [ "bip39" ]
slip10 = [ "hmac", "sha", "ed25519", "random", "serde", "zeroize" ]
cipher = [ "aead", "generic-array" ]
ternary_encoding = [ "serde", "num-traits" ]
age = [ "aead", "base64", "chacha20poly1305", "hkdf", "hmac_", "scrypt", "sha2", "zeroize" ]

[dependencies]
block-modes = { version = "0.8", optional = true, default-features = false }
aead = { version = "0.4", optional = true, default-features = false }
aes-crate = { version = "0.7", optional = true, default-features = false, package = "aes" }
aes-gcm-crate = { version = "0.9", optional = true, default-features = false, package = "aes-gcm", features = [ "aes" ] }
bee-common-derive = { version = "0.1.1-alpha", optional = true, default-features = false }
blake2 = { version = "0.10.5", optional = true, default-features = false }
byteorder = { version = "1.4", optional = true, default-features = false }
chacha20poly1305 = { version = "0.9", optional = true, default-features = false }
digest = { version = "0.10", optional = true, default-features = false }
ed25519-zebra = { version = "3.0", optional = true, default-features = false }
generic-array = { version = "0.14", optional = true, default-features = false }
getrandom = { version = "0.2", optional = true, default-features = false, features = [ "js" ] }
hmac_ = { version = "0.12", optional = true, default-features = false, package = "hmac" }
lazy_static = { version = "1.4", optional = true, default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }
pbkdf2 = { version = "0.12", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
subtle = { version = "2.4", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
sha3 = { version = "0.10", optional = true, default-features = false }
tiny-keccak = { version = "2.0", optional = true, default-features = false, features = [ "keccak" ] }
unicode-normalization = { version = "0.1", optional = true, default-features = false }
curve25519-dalek = { version = "3.2", optional = true, default-features = false, features = [ "u64_backend" ] }
x25519-dalek = { version = "1.1", optional = true, default-features = false, features = [ "u64_backend" ] }
zeroize = { version = "1.5", optional = true, default-features = false, features = [ "zeroize_derive" ] }
scrypt = { version = "0.10", optional = true, default-features = false }
hkdf = { version = "0.12", optional = true, default-features = false }
base64 = { version = "0.21", optional = true, default-features = false }

[target."cfg(not(target_family = \"wasm\"))".dependencies]
cpufeatures = { version = "0.2", optional = true, default-features = false }

[build-dependencies]
autocfg = { version = "1.1", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc", "std" ] }
rand = { version = "0.8", default-features = false, features = [ "std", "std_rng", "min_const_gen" ] }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc", "std" ] }
age = { version = "0.9", default-features = false }

[profile.dev]
split-debuginfo = "unpacked"
